<resources>
    <string name="app_name">猿猴直播</string>
    <string name="room_name">直播间名字</string>
    <string name="hint_room_name">请输入直播间名字</string>
    <string name="create_room">创建直播间</string>


    <!--ijkPlayer-->
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="str_main_page">首页</string>
    <string name="str_rss">订阅</string>
    <string name="str_mine">我的</string>
    <string name="str_anchor">主播: </string>
    <string name="str_apply_host">我要当主播</string>
    <string name="str_my_rss">我的订阅</string>
    <string name="str_history">观看历史</string>
    <string name="str_letter">私信</string>
    <string name="str_setting">设置</string>
    <string name="str_copyright">版权声明</string>
    <string name="str_hardware_decode">硬件解码</string>
    <string name="str_little_window">推出直播间时小窗播放</string>
    <string name="str_suggestion">意见反馈</string>
    <string name="str_check_update">检查更新</string>
    <string name="str_about_us">关于我们</string>
    <string name="str_quit">退出登陆</string>
    <string name="str_2login">点击登录</string>
    <string name="str_login">登陆</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="str_sign_up">注册</string>
    <string name="str_lost_pwd">忘记密码</string>
    <string name="prompt_nickname">nickname</string>
    <string name="str_reset_pwd_email">发送重置密码邮件</string>

    <string name="str_copyright_content">来自一个出身Android \n
        渴望脚踏Android / 后台两条船的程序猿的 \n
        无聊毕设  \n
        会开源 \n
        现在还很粗糙\n
        也不十分规范\n
        也许以后还会维护\n
        没事提个issues呗\n
        留个star呗
    </string>
    <string name="str_prompt_feedback">用的不爽？ 尽管来吐槽~</string>
    <string name="str_submit">提交</string>
    <string name="str_copyright_qloop">COPYRIGHT@Qloop漫步</string>
    <string name="str_avator">头像</string>
    <string name="str_change">更换</string>
    <string name="str_unsign">未登录</string>
    <string name="str_reset_nickname">修改</string>
    <string name="str_nickname">昵称</string>
    <string name="str_email">邮箱</string>
    <string name="str_not_reset">不可修改</string>
    <string name="str_take_phone">拍照</string>
    <string name="str_take_album">从手机上获取</string>
    <string name="str_cancel">取消</string>
    <string name="str_classify">选择直播分类</string>
    <string name="str_next">下一步</string>
    <string name="str_create_live_room">创建直播间</string>
    <string name="str_live_room_name">直播间名称</string>
    <string name="str_live_room_details">请写一下直播间详情</string>
    <string name="str_horizental">横屏模式</string>
    <string name="str_start_live">开始直播</string>
    <string name="str_vertical">竖屏模式</string>
    <string name="str_live_info">直播详情</string>
</resources>
