<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="5">

    <EditText
        android:id="@+id/et_live_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/colorWhite"
        android:gravity="start"
        android:hint="@string/str_live_room_name"
        android:padding="10dp"
        android:textColorHint="@color/colorGray"/>

    <EditText
        android:id="@+id/et_live_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="30dp"
        android:layout_weight="2"
        android:background="@color/colorWhite"
        android:gravity="start"
        android:hint="@string/str_live_room_details"
        android:padding="10dp"
        android:textColorHint="@color/colorGray"/>

    <Button
        android:id="@+id/btn_create_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/selector_btn_login"
        android:text="@string/str_create_live_room"
        android:textColor="@color/colorWhite"/>
</LinearLayout>