<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:gravity="center_horizontal"
              android:orientation="vertical">


    <com.qloop.orange.wight.TopBarView
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:topTitle="设置"/>

    <com.qloop.orange.wight.ProfileItemLayout
        android:id="@+id/copyright_statement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:profile_title="@string/str_copyright"/>

    <RelativeLayout
        android:id="@+id/rl_hardware_decode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/tv_hardware_decode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/str_hardware_decode"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"/>

        <Switch
            android:id="@+id/switch_hardware_decode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGray3"/>

    <RelativeLayout
        android:id="@+id/rl_little_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/tv_little_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/str_little_window"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"/>

        <Switch
            android:id="@+id/switch_little_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <com.qloop.orange.wight.ProfileItemLayout
        android:id="@+id/pil_suggestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:profile_title="@string/str_suggestion"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGray3"/>

    <com.qloop.orange.wight.ProfileItemLayout
        android:id="@+id/pil_check_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:profile_title="@string/str_check_update"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGray3"/>

    <com.qloop.orange.wight.ProfileItemLayout
        android:id="@+id/pil_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:profile_title="@string/str_about_us"/>


    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_btn_quit_login"
        android:text="@string/str_quit"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor="@color/colorGray2"
        android:textSize="14sp"
        tools:text="Version 1.0"/>
</LinearLayout>