<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/selector_user_top"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">

        <com.qloop.orange.wight.CircleImageView
            android:id="@+id/civ_avatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/ic_avatar_default"
            app:borderWith="0dp"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="18sp"
            tools:text="泡面Code"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="80dp"
            android:background="@drawable/shape_btn_login"
            android:text="@string/str_2login"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.qloop.orange.wight.ProfileItemLayout
                android:id="@+id/ptl_apply_host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:profile_icon="@mipmap/ic_profile_apply_host"
                app:profile_title="@string/str_apply_host"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/colorGray"/>

            <com.qloop.orange.wight.ProfileItemLayout
                android:id="@+id/ptl_rss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:profile_icon="@mipmap/ic_profile_follow"
                app:profile_title="@string/str_my_rss"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/colorGray"/>

            <com.qloop.orange.wight.ProfileItemLayout
                android:id="@+id/ptl_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:profile_icon="@mipmap/ic_profile_history"
                app:profile_title="@string/str_history"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/colorGray"/>

            <com.qloop.orange.wight.ProfileItemLayout
                android:id="@+id/ptl_privateLetter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:profile_icon="@mipmap/ic_profile_letter"
                app:profile_title="@string/str_letter"/>

            <com.qloop.orange.wight.ProfileItemLayout
                android:id="@+id/ptl_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:profile_icon="@mipmap/ic_profile_feedback"
                app:profile_title="@string/str_setting"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>