<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:id="@+id/ll_profile_root"
              android:orientation="vertical">

    <com.qloop.orange.wight.TopBarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:topTitle="个人资料"/>

    <RelativeLayout
        android:id="@+id/rl_change_avator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_avator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/str_avator"/>

        <com.qloop.orange.wight.CircleImageView
            android:id="@+id/civ_avator"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_toEndOf="@+id/tv_avator"
            android:src="@mipmap/ic_avatar_default"
            app:borderWith="0dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/iv_right"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/str_change"
            android:textColor="@color/colorPrimary"/>

        <ImageView
            android:id="@+id/iv_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:src="@mipmap/ic_right"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_change_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/str_nickname"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv_nickname"
            android:padding="5dp"
            android:text="@string/str_unsign"
            android:textColor="@color/colorGray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/str_not_reset"
            android:textColor="@color/colorGray"/>

        <!--<ImageView-->
        <!--android:id="@+id/iv_right2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:padding="5dp"-->
        <!--android:src="@mipmap/ic_right"/>-->
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/str_email"/>

        <TextView
            android:id="@+id/tv_user_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv_email"
            android:padding="5dp"
            android:textColor="@color/colorGray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:text="@string/str_not_reset"
            android:textColor="@color/colorGray"/>
    </RelativeLayout>
</LinearLayout>